# Vibe-Coding-Setting-swseo

./: .editorconfig  .env.example  .gitattributes  .gitignore  .mcp.json  CUsersESTPycharmProjectsprojectVibe-Coding-Setting-swseomaintmpab-testversion-bstart_time.txt  MID-DEBATE-FEATURE-TEST-REPORT.md  MID-DEBATE-TEST-SUMMARY.md  MID-DEBATE-VISUAL-COMPARISON.md  ai-collaborative-solver-autoactivation-test-report.md  ai-collaborative-v2-integration-plan.md  claude.md  comparison-codex-vs-ai-solver.md  pytest.ini  test-codex-v3.py  test-mid-debate-feature.py  test-mid-debate-result.json  test-playwright-mcp-basic-v2.py  test-playwright-mcp-basic.py  test-skill-reviewer-improved.py  test-skill-reviewer.py  test-v3-current-dir.py  test-worktree-korean.py  test-worktree-skill-fixed.py  test-worktree-trigger-fix.py  test_init_workspace.py  v3-test-report-current-dir.md  v3-test-summary.md  v3-test-visual-comparison.md
.claude/: settings.local.json
.claude/agents/: langgraph-node-implementer.md  meta-tester.md  pytest-test-writer.md  skill-executor.md
.claude/commands/: apply-settings.md  clarify.md  docs-generate-index.md  merge.md  (+15 more)
.debate-reports/: 2025-10-28-n8n-workflow-unit-testing.md  2025-10-31-21-27-ai-debate-auto.md  2025-10-31-21-36-ai-debate-auto.md  2025-10-31-21-36-ai-debate-codex.md  2025-10-31-21-38-ai-debate-auto.md  2025-10-31-21-39-ai-debate-gemini.md  2025-10-31-21-47-ai-debate-codex.md  2025-10-31-ai-collaborative-architecture-design.md  2025-10-31-automation-approach.md  2025-10-31-clarification-stage-design.md  2025-10-31-debate-skill-v3-design.md  2025-10-31-django-api-performance-optimization.md  2025-10-31-django-rate-limiting-redis-vs-memcached.md  2025-10-31-facilitator-fix-proposal.md  2025-10-31-facilitator-investigation-index.md  2025-10-31-facilitator-quality-investigation.md  2025-10-31-facilitator-summary.md  2025-10-31-facilitator-visual-evidence.md  2025-10-31-meta-codex-skill-improvements.md  2025-10-31-meta-test-codex-v3-skill.md  2025-10-31-mid-debate-user-input-design.md  2025-10-31-postgresql-vs-mongodb-debate.md  2025-10-31-pycharm-worktree-indexing.md  2025-10-31-python-api-performance-general.md  2025-10-31-speckit-worktree-optimization.md  2025-10-31-v3-meta-test-comprehensive-report.md  2025-10-31-verification-results.md  2025-10-31-vibe-coding-worktree-methodology.md  2025-11-01-16-11-ai-debate-auto.md  2025-11-01-FINAL-git-worktree-complete-guide.md  2025-11-01-ai-collaborative-solver-skill-review.md  2025-11-01-git-worktree-pycharm-vibe-coding.md  2025-11-01-skill-reviewer-final-meta-test.md  2025-11-01-skill-reviewer-improvement-test-report.md  2025-11-01-skill-reviewer-test-progression.md  2025-11-01-worktree-korean-trigger-test.md  2025-11-01-worktree-skill-post-legacy-removal-test.md  2025-11-01-worktree-trigger-fix-verification.md  2025-11-02-23-03-ai-debate-codex.md  2025-11-02-23-04-ai-debate-gemini.md  (+25 more)
.idea-template/: misc.xml  modules.xml
.mcp-scripts/: playwright-mcp-wrapper-test.js
.mcp-snapshot/: global-claude-before.json  global-claude-working.json  state.txt
.test-outputs/: skill-reviewer-meta-test-report.md  skill-reviewer-test-result.json
docs/: CHANGES_SUMMARY.md  MIGRATION.md  README-langgraph-tdd-analysis.md  README.md  REVIEW.md  claude-code-session.md  codex-session-management.md  codex-session.md  gemini-cli-session.md  knowledge-base-design.md  langgraph-agent-update-plan.md  langgraph-tdd-analysis-real-vs-mock-api.md  langgraph-tdd-analysis-summary.md  langgraph-tdd-comparison-example.md  langgraph-tdd-visual-guide.md  langgraph-vcr-migration-guide.md  langgraph-vcr-quick-reference.md  linear-api-integration.md  linear-api-quick-reference.md  linear-mcp-vs-api-comparison.md  openai-codex-guide.md  playwright-persistent-login.md  readme-config-spec.md  recursive-readme-guide.md  testing_guidelines.md  worktree-analysis-and-improvements.md  worktree-decision-framework.md  worktree-implementation-examples.md  worktree-quick-reference.md
e2e-test-1/: debate_summary.md  session_info.txt
e2e-test-2/: debate_summary.md  session_info.txt
e2e-test-3/: debate_summary.md  session_info.txt
e2e-test-4/: debate_summary.md  session_info.txt
e2e-test-5/: debate_summary.md  session_info.txt
mcp-servers/openai-judge/: .env.example  .gitignore  README.md  pyproject.toml  server.py
templates/python/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  claude.md  pyproject.toml  template.meta.yaml
templates/python/.github/: dependabot.yml
templates/python/.github/workflows/: ci.yml  dependency-update.yml  release.yml
templates/python/notebooks/: README.md
templates/python/src/myproject/: __init__.py
templates/python/tests/: conftest.py
templates/python/tests/e2e/: conftest.py
templates/python/tests/integration/: conftest.py
templates/python/tests/unit/: conftest.py
test-fixed-facilitated/: SUMMARY.md  debate_summary.md  retest-report.md  session_info.txt
test-real-facilitated/: debate_summary.md  session_info.txt  test-report.md
test-with-jq/: debate_summary.md  session_info.txt
tests/: README.md  __init__.py  test_update_speckit.py
(+468 files in other folders)
